# bf-rs

./: .gitignore  Cargo.toml  README.md  README_cargo.md  build.rs  build.rs.bak  build.sh
assets/: prog_meta.rc
examples/: hello_world.bf  hello_world_strip.bf
src/: main.rs
src/interpreter/: core.rs  mod.rs  utils.rs
