[package]
name = "bfrs"
description = "Yet another brainfuck interpreter written in Rust."
version = "0.1.0"
edition = "2021"
authors = ["DevComp <hi@devcomp.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
